--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,10 @@
 [project]
-name = "src"
+name = "prime_vfv"
 version = "0.0.0"
-description = "Hello World"
+description = "PRIME + Vul-Fix-Vul research"
 authors = [{ name = "Nicholas M. Synovic", email = "nicholas.synovic@gmail.com" }]
 requires-python = "~=3.13"
 readme = "README.md"
-license = "AGPL-3.0-only"
 keywords = ["Template"]
 classifiers = [
     "Development Status :: 1 - Planning",
@@ -16,10 +15,6 @@ classifiers = [
 [project.urls]
 Homepage = "https://github.com/NicholasSynovic/template_python"
 Repository = "https://github.com/NicholasSynovic/template_python"
-
-[project.scripts]
-src = "src.main:main"
-
 
 [build-system]
 requires = ["hatchling"]
