--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ classifiers = [
     "License :: OSI Approved :: GNU Affero General Public License v3",
     "Programming Language :: Python :: 3.13"
 ]
+dependencies = [
+    "pandas>=2.3.2",
+]
 
 [project.urls]
 Homepage = "https://github.com/NicholasSynovic/template_python"
