--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "VulnerabilityReintroducingDataset"]
 	path = VulnerabilityReintroducingDataset
 	url = https://github.com/anonSubmissionGithub/VulnerabilityReintroducingDataset
+[submodule "cvelistV5"]
+	path = cvelistV5
+	url = https://github.com/CVEProject/cvelistV5
