--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ classifiers = [
     "Programming Language :: Python :: 3.13"
 ]
 dependencies = [
+    "click>=8.3.0",
     "pandas>=2.3.2",
+    "sqlalchemy>=2.0.43",
 ]
 
 [project.urls]
