--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ classifiers = [
 ]
 dependencies = [
     "click>=8.3.0",
+    "gitpython>=3.1.45",
     "matplotlib>=3.10.6",
     "pandas>=2.3.2",
     "progress>=1.6.1",
