Refactor issue spoilage code

--- a/data/.gitignore
+++ b/data/.gitignore
@@ -8,3 +8,4 @@
 !vfv_imagemagick_commits_per_year.csv
 !vfv_imagemagick_cwes_per_year.csv
 !vfv_imagemagick_time_between_commits.csv
+!prime_imagemagick_issue_spoilage.csv
